<resources>
    <string name="app_name">Efficient</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--Framgmento de cadastro de disciplina-->
    <string name="Nomedadisciplina">Nome da disciplina</string>
    <string name="opcional">Opcional</string>
    <string name="Nomedoprofessor">Nome do Professor</string>
    <string name="EmailDoProfessor">Email do Professor</string>
    <string name="nova_disciplina">Nova disciplina</string>
    <string name="escolha_a_cor">Escolha a cor</string>
    <string name="ok">ok</string>
    <string name="cancelar">cancelar</string>
    <string name="editar">Editar</string>


    <!--Horario-->
    <string name="Horarios">Horários</string>
    <string name="Horario">Horário</string>
    <string name="Novo_Horario">Novo Horário</string>


    <!--Nota-->
    <string name="Nova_nota">Nova nota</string>
    <string name="Nota">Nota</string>


    <!--Galeria-->
    <string name="Galeria">Galeria</string>


    <string name="Salvar">Salvar</string>
    <string name="title_activity_add_disciplina">add_disciplina</string>
    <string name="salvar">Salvar</string>
    <string name="Nome">Nome</string>
    <string name="abreviação">Abreviação</string>
    <string name="Professor">Professor</string>
    <string name="Email">Email</string>
    <string name="Observação">Observação</string>
    <string name="Obrigatório">Obrigatório</string>
    <string name="title_activity_cadastrar__disciplina">Cadastrar_Disciplina</string>
    <string name="title_activity_disc">DiscActivity</string>
    <string name="camera">Camera</string>
    <string name="galeria">Galeria</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="horarios">Horarios</string>
    <string name="title_activity_editar__disciplina">Editar_Disciplina</string>
    <string name="alterar">Alterar</string>
    <string name="Excluir">Excluir</string>
    <string name="title_activity_cadastrar__nota">Cadastrar_Nota</string>
    <string name="texto">Texto</string>
    <string name="cor">Cor</string>
    <string name="titulo">Titulo</string>
    <string name="title_activity_editar__notas">Editar_Notas</string>
    <string name="Cadastrar_nota">Adicionar nota</string>
    <string name="Cadastrar_disciplina">Adicionar disciplina</string>
    <string name="Editar_nota">Editar nota</string>
    <string name="Editar_disciplina">Editar disciplina</string>
    <string name="title_activity_cadastrar__horario">Cadastrar_Horario</string>
    <string name="disciplina">Disciplina</string>
    <string name="dia">Dia</string>
    <string name="sala">Sala</string>
    <string name="inicio">Inicio</string>
    <string name="fim">Fim</string>
    <string name="title_activity_disciplina">DisciplinaActivity</string>
    <string name="title_activity_edit_disciplina">edit_disciplina</string>
    <string name="title_activity_horarios">horariosActivity</string>
    <string name="title_activity_add__horario">add_Horario</string>

    <!---Drawer menu-->
    <string name="notas">Notas</string>

    <!---Dias da semana-->
    <string-array name="dias_semana">
        <item>Segunda</item>
        <item>Terca</item>
        <item>Quarta</item>
        <item>Quinta</item>
        <item>Sexta</item>
        <item>Sabado</item>
    </string-array>
    <string name="title_activity_dias_semana">DiasSemanaActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add__lembrete">add_Lembrete</string>
    <string name="title_activity_notas">notasActivity</string>
    <string name="title_activity_add_nota">add_nota</string>
    <string name="title_activity_galeria">GaleriaActivity</string>
    <string name="title_activity_gallery_picture">GalleryPictureActivity</string>
    <string name="title_activity_show_disciplina">showDisciplina</string>
    <string name="title_activity_show_horario">showHorario</string>
    <string name="title_activity_show_nota">showNota</string>


</resources>
