<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_camera"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/camera" />
   </group>
    <group
        android:id="@+id/menu_galeria"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_galeria"
            android:title="@string/galeria" />
    </group>
    <group
        android:id="@+id/menu_disciplina"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_disciplinas"
            android:title="@string/disciplinas" />
    </group>
    <group
        android:id="@+id/menu_horarios"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_horarios"
            android:title="@string/horarios" />
    </group>
    <group
        android:id="@+id/menu_notas"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_notas"
            android:title="@string/notas" />
    </group>
    <group
        android:id="@+id/menu_lembrete"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_sobre"
            android:title="Sobre" />
    </group>
    <group
        android:id="@+id/menu_x"
        android:checkableBehavior="single">
        </group>
</menu>
