<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pablo.efficient.HorarioPackage.add_Horario"
    tools:showIn="@layout/activity_add__horario">
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disciplina" />

        <Spinner
            android:id="@+id/spinnerDisciplinaHorario"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dia" />

        <Spinner
            android:id="@+id/spinnerDiaHorario"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sala" />


        <EditText
            android:id="@+id/editTextSalaHorario"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inicio" />

        <EditText
            android:id="@+id/edtTextHorarioInicio"
            android:focusable="false"
            android:onClick="set_timeinicio"
            android:minEms="10"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fim"
            />

        <EditText
            android:id="@+id/edtTextHorarioFim"
            android:focusable="false"
            android:layout_width="70dp"
            android:onClick="set_timefim"
            android:minEms="10"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
