<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.efficient.DisciplinaPackage.DisciplinaPackage.add_disciplina"
    tools:showIn="@layout/activity_add_disciplina"
    >


<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nomedadisciplina"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000000"

            />

        <EditText
            android:id="@+id/edt_nome_disciplina"
            android:layout_width="330dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPersonName"
            android:hint="@string/opcional"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background= "@color/cinzaclaro3">
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abreviação"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="normal"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/edt_abreviacao_disciplina"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:layout_marginBottom="0dp"
            android:inputType="textPersonName"
            android:hint="@string/Obrigatório"
            />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/barra_cor_disciplina"
            android:background="@color/azul_claro2"/>




        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nomedoprofessor"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000000"/>


        <EditText
            android:id="@+id/edt_professor_disciplina"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPersonName"
            android:hint="@string/opcional"

            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EmailDoProfessor"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/edt_email_disciplina"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPersonName"
            android:hint="@string/opcional"
            />

    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>
