<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pablo.efficient.DisciplinaPackage.showDisciplina"
    tools:showIn="@layout/activity_show_disciplina">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nomedadisciplina"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/txt_nome_disciplina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15dp"
            android:text="TextView"
            android:textColor="#000000"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:background="@color/cinzaclaro3"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abreviação"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/txt_abreviacao_disciplina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16dp"
            android:textColor="#000000"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"

            android:background="@color/cinzaclaro3"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nomedoprofessor"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/txt_professor_disciplina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EmailDoProfessor"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/txt_email_disciplina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15dp"/>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
