<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pablo.efficient.HorarioPackage.showHorario"
    tools:showIn="@layout/activity_show_horario">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView72"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disciplina"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/txt_disciplina_horario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15dp"
            android:text="TextView"
            android:textColor="#000000"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:background="@color/cinzaclaro3"/>

        <TextView
            android:id="@+id/textView112"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dia"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/txt_dia_horario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16dp"
            android:textColor="#000000"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"

            android:background="@color/cinzaclaro3"/>

        <TextView
            android:id="@+id/textView132"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sala"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/txt_sala_horario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView152"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inicio"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/txt_inicio_horario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15dp"/>

    </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
