<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pablo.efficient.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

        <ImageView
            android:id="@+id/camera_main"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_camera_main"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:paddingLeft="12dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18dp"
                android:textColor="#000000"
                />
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/galeria_main"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_galera_main"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/galeria"
            android:paddingLeft="12dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="18dp"
            android:textColor="#000000"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/disciplinas_main"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/ic_disciplinas_main" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disciplinas"
            android:paddingLeft="12dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="18dp"
            android:textColor="#000000"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/horario_main"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/ic_horario_main" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Horarios"
            android:paddingLeft="12dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="18dp"
            android:textColor="#000000"
            />
    </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
